--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -363,7 +363,7 @@
 
 
   <!-- Organisaation tekijat esitaytto -->
-    <div class="row form-group"
+  <div class="row form-group"
          data-ng-if="isFieldVisible('organisaatiotekija')">
     <div class="col-sm-4 col-xs-12" id="organisaatiotekijaGroup">
       <label class="control-label" data-ng-bind="i18n.content.form.organisaatiotekija[lang]"></label>
@@ -384,11 +384,12 @@
                  validate-organisaatiotekijat-directive validate="validateState"
                  field="sukunimi"
                  value="justus.organisaatiotekija[$index].sukunimi">
+                  <label>{{i18n.content.form.organisaatiotekija.sukunimi.picktip[lang]}}</label>
                   <ui-select data-ng-model="organisaatioTekijaSelected"
                              on-select="useOrganisaatiotekija($select.selected, 'sukunimi', $index)"
                              theme="bootstrap">
                     <ui-select-match class="ui-select-match"
-                                     placeholder="{{ i18n.content.form.organisaatiotekija.sukunimi.picktip[lang]}}">
+                                     placeholder="Valitse / Kirjoita sukunimi">
                       {{ i.sukunimi }}
                     </ui-select-match>
                     <ui-select-choices repeat="person in persons | orderBy: 'sukunimi' | filter: { sukunimi: $select.search }">
@@ -400,6 +401,7 @@
             <div class="col-xs-12 col-sm-6 etunimetGroup"
                  validate-organisaatiotekijat-directive validate="validateState" field="etunimet"
                  value="justus.organisaatiotekija[$index].etunimet">
+              <label>{{i18n.content.form.organisaatiotekija.etunimet.picktip[lang]}}</label>
               <input type="text" class="form-control"
                      data-ng-disabled="organisaatiotekijaDisabled"
                      data-ng-model="justus.organisaatiotekija[$index].etunimet"
@@ -409,9 +411,10 @@
           </div>
 
           <div class="row form-group">
-              <div data-ng-if="isFieldVisible('alayksikko')"  class="col-xs-12 col-sm-6 form-group"
+              <div data-ng-if="isFieldVisible('alayksikko')"  class="col-xs-12 col-sm-6"
                    validate-organisaatiotekijat-directive validate="validateState" field="orcid"
                    value="justus.organisaatiotekija[$index].orcid">
+                 <label>{{i18n.content.form.organisaatiotekija.orcid.picktip[lang]}}</label>
                   <input type="text" class="form-control"
                          data-ng-keyup="useOrcidEsitaytto(justus.organisaatiotekija[$index].orcid, $index)"
                          data-ng-disabled="organisaatiotekijaDisabled"
@@ -443,75 +446,88 @@
                     </ui-select-choices>
                   </ui-select>
               </div>
-
-          <div data-ng-if="isFieldVisible('alayksikko')" class="col-xs-12">
-            <div data-ng-repeat="ota in justus.organisaatiotekija[$index].alayksikko track by $index"
-                 data-ng-init="pIx=$parent.$index" class="row">
-              <div class="col-xs-11 col-sm-11 mb-x"
-                   validate-organisaatiotekijat-directive validate="validateState"
-                   field="alayksikko" value="ota">
-                      <input
-                              type="text"
-                              class="form-control"
-                              data-ng-disabled="organisaatiotekijaDisabled"
-                              value="{{ota}}"
-                              placeholder="{{ i18n.content.form.organisaatiotekija.alayksikko.picktip[lang] }}">
-                      <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
-
-                <!--<ui-select data-ng-model="alayksikko.selected"-->
-                           <!--on-select="useOrganisaatiotekijaAlayksikko(pIx,$index,$select.selected.arvo)"-->
-                           <!--theme="bootstrap"-->
-                           <!--class="dropdown-height-300">-->
-                    <!--<ui-select-match class="ui-select-match"-->
-                                     <!--placeholder="{{ ota.arvo }} {{ getSelite(user.alayksikot, ota.arvo)|| i18n.content.form.organisaatiotekija.alayksikko.picktip[lang]}}">-->
-                    <!--{{ ota }}  {{ getSelite(user.alayksikot, ota) }}-->
-                  <!--</ui-select-match>-->
-                  <!--<ui-select-choices repeat="a in tempAlayksikot | filter: $select.search">-->
-                     <!--{{a}} {{ getSelite(user.alayksikot, a) }}-->
-                  <!--</ui-select-choices>-->
-                <!--</ui-select>-->
-              </div>
-              <div>
-
-              <div class="col-xs-1 col-sm-1 pl-0">
-                <span class="btn btn-primary" data-ng-class="{'mb-x': $last}"
-                      data-ng-click="addAlayksikko($parent.$index, $index)"
-                      data-ng-hide="justus.organisaatiotekija[$parent.$index].alayksikko.length<2"
-                      title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
-                      data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">
-                </span>
-              </div>
-              </div>
-            </div>
-            </div>
           </div>
-        </div>
-        <div class="col-xs-2">
-          <span class="btn btn-primary mb-x"
-                data-ng-click="justus.organisaatiotekija.splice($index, 1)"
-                data-ng-hide="justus.organisaatiotekija.length<2"
-                title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
-                data-ng-bind="i18n.content.form.organisaatiotekija.poista.tooltip[lang]">
-          </span>
-          <span class="btn btn-primary"
-                data-ng-click="addOrganisaatiotekija()"
-                data-ng-hide="$index < justus.organisaatiotekija.length-1"
 
-                title="{{i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]}}"
-                data-ng-bind="i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]">
-          </span>
 
-          <i class="fa fa-arrow-left pull-right form-control-feedback-extra"
-             data-ng-if="requiredHighlight && !(justus.organisaatiotekija[$index].sukunimi && justus.organisaatiotekija[$index].etunimet
-            && justus.organisaatiotekija[$index].alayksikko[0].alayksikko
-            )"><!-- nb! ei pakollinen vielä && justus.organisaatiotekija[$index].orcid)" -->
-          </i>
+          <div class="row form-group">
+            <div data-ng-if="isFieldVisible('alayksikko')" class="col-xs-12">
+              <div class="row form-group no-gutter" data-ng-show="justus.organisaatiotekija[$index].alayksikko[0]">
+              <label>Alayksikkö / Alayksiköt</label>
+                <div data-ng-repeat="ota in justus.organisaatiotekija[$index].alayksikko track by $index"
+                     data-ng-init="pIx=$parent.$index" >
+                  <div class="row no-gutter">
+                  <div class="col-xs-11 col-sm-11" data-ng-hide="!ota"
+                       validate-organisaatiotekijat-directive validate="validateState"
+                       field="alayksikko" value="ota">
+                    <input
+                        type="text"
+                        class="form-control mb-x"
+                        data-ng-disabled="organisaatiotekijaDisabled"
+                        value="{{ota}}"
+                        placeholder="{{ i18n.content.form.organisaatiotekija.alayksikko.picktip[lang] }}">
+                    <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
+                  </div>
+                    <div class="col-xs-1 col-sm-1 ">
+                      <span class="btn btn-primary pull-right"
+                            data-ng-click="poistaAlayksikko(pIx, $index)"
+                            title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
+                            data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <span>Lisää alayksiköitä</span>
+              <div class="row form-group">
+                  <div class="col-xs-12 col-sm-5">
+                    <ui-select data-ng-model="alayksikkovuosi.selected"
+                               theme="bootstrap">
+                      <ui-select-match class="ui-select-match"
+                                       data-ng-value="alayksikkovuosi.selected"
+                                       placeholder="{{i18n.content.form.organisaatiotekija.alayksikkovuosi.picktip[lang]}}">
+                      {{ $select.selected.label }}
+                      </ui-select-match>
+                      <ui-select-choices repeat="ala in alayksikkovuodet">
+                      {{ala.label}}
+                      </ui-select-choices>
+                    </ui-select>
+                  </div>
+                  <div class="col-xs-12 col-sm-7">
+                    <ui-select data-ng-model="alayksikko.selected"
+                               on-select="useAlayksikko($index,$select.selected.arvo)"
+                               theme="bootstrap"
+                               class="dropdown-height-300">
+                    <ui-select-match class="ui-select-match"
+                                     placeholder="Lisää alayksikkö">
+
+                    </ui-select-match>
+                    <ui-select-choices repeat="o in getAlayksikkoData(alayksikkovuosi.selected) | filter: $select.search">
+                    {{ getArvo(o.arvo)}} {{o.selite}}
+                    </ui-select-choices>
+                    </ui-select>
+                  </div>
+                </div>
+              </div>
+
+        <!--<div class="col-xs-2">-->
+          <!--<span class="btn btn-primary mb-x"-->
+                <!--data-ng-click="justus.organisaatiotekija.splice($index, 1)"-->
+                <!--data-ng-hide="justus.organisaatiotekija.length<2"-->
+                <!--title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"-->
+                <!--data-ng-bind="i18n.content.form.organisaatiotekija.poista.tooltip[lang]">-->
+          <!--</span>-->
+              <span class="btn btn-primary"
+                    data-ng-click="addOrganisaatiotekija()"
+                    data-ng-hide="$index < justus.organisaatiotekija.length-1"
+                    title="{{i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]}}">
+                Lisää organisaatiotekijä
+              </span>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-
 
    <!-- Kenttä: Projektinumero -->
    <div class="row form-group"
